data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1279.wast
;; 10. **Test Description:**    Create nested loop structures where `unreachable` is inside the innermost one, combined with `br_table` instructions at various outer loops and block levels, focusing on trap and block exit consistency.    *Constraint Checked:* Correct evaluation of control structure depth and ensuring `unreachable` traps as expected within complex nesting.    *Mismanagement Focus:* Potential escape from incorrect nested structures revealing control flow issues when `unreachable` is executed.

(assert_invalid
  (module (func (result i32)
    (block (loop (block (unreachable)) (loop (br_table 0 1 1 (i32.const 0))) (i32.const 1)))
  ))
  "type mismatch"
)